Belt Review (events)

--- a/events/src/main/resources/messages.properties
+++ b/events/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 Match.user.passwordConfirmation=Password and Password Confirmation must match
 Taken.user.email=Email taken!
+Before.event.date=Date must be in the future!
