--- a/events/src/main/resources/messages.properties
+++ b/events/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 Match.user.passwordConfirmation=Password and Password Confirmation must match
 Taken.user.email=Email taken!
 Before.event.date=Date must be in the future!
+Not.event.date=Date is required!
